--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,5 +1,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<app-header></app-header>
+<app-header *ngIf="showHeader"></app-header>
 <router-outlet></router-outlet>
